# DiscordBotPihole

./: .gitignore  Cargo.toml  Main.py  README.md  Utils.py  example.env  main.py
.github/workflows/: generate-executable.yml  mirror-github-to-gitlab.yml
cogs/: help.py  settings.py  stats.py
commands/: Help.py  Settings.py
config/: config.json
docker/: Dockerfile  docker-compose.yml
events/: OnReady.py  Stats.py
src/: lib.rs  main.rs  utils.rs
src/client/: client.rs  discord_client.rs  mod.rs  serenity_handler.rs
src/commands/: infos.rs  message_updater.rs  mod.rs
utils/: config.json  utils.py
