[package]
name = "discord_bot_pihole"
version = "0.0.1"
authors = ["Asthowen<contact@asthowen.fr>"]
edition = "2021"
description = "A discord bot for get Pi-Hole stats written in Rust."
repository = "https://github.com/Asthowen/DiscordBotPihole"
readme = "README.md"
license = "MPL-2.0"

[profile.release]
codegen-units = 1
strip = true
lto = true

[dependencies]
proctitle = "0.1.1"
serde_json = "1.0"
reqwest = "0.11.8"
chrono = "0.4.19"
dotenv = "0.15"

[dependencies.openssl]
version = "0.10"
features = ["vendored"]

[dependencies.log]
version = "^0.4.14"
features = ["std"]

[dependencies.serenity]
version = "0.10.10"
default-features = false
features = ["cache", "collector", "client", "gateway", "model", "rustls_backend", "unstable_discord_api"]

[dependencies.tokio]
version = "1.0"
features = ["macros", "rt-multi-thread", "signal"]

[dependencies.simple_logger]
version = "2.1.0"
features = ["timestamps"]