[package]
name = "discord_bot_pihole"
version = "0.0.3"
authors = ["Asthowen<contact@asthowen.fr>"]
edition = "2021"
description = "A discord bot for get Pi-Hole stats written in Rust."
repository = "https://github.com/Asthowen/DiscordBotPihole"
readme = "README.md"
license = "MPL-2.0"

[profile.release]
codegen-units = 1
strip = true
lto = true

[dependencies]
serenity = { version = "0.11.5", default-features = false, features = ["cache", "collector", "client", "gateway", "model", "native_tls_backend", "unstable_discord_api"] }
tokio = { version = "1.25.0", default-features = false, features = ["macros", "rt-multi-thread", "signal"] }
openssl = { version = "0.10.45", features = ["vendored"] }
simple_logger = { version = "4.0.0", features = ["timestamps"] }
serde_json = "1.0.93"
proctitle = "0.1.1"
reqwest = "0.11.14"
chrono = "0.4.23"
dotenv = "0.15.0"
log = "0.4.17"